--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,8 @@
 
 @layer base {
   body {
-    @apply bg-[#fcfcfc] text-[#000000] tracking-wide
+    @apply bg-[#fcfcfc] text-[#000000] tracking-wide;
+    @apply font-roboto;
   }
 
   h1, h2, h3, h4, h5, h6 {
@@ -12,7 +13,8 @@
   }
 
   h1 {
-    @apply text-4xl sm:text-5xl md:text-6xl
+    @apply text-5xl sm:text-6xl md:text-7xl;
+    @apply font-montserrat
   }
 
   h2 {
